tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@unknown_top_subscript.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/unknown_top_subscript.txt
---
error: Cannot index into an undefined value
 --> unknown_top_subscript.txt:1:4
  |
1 | {{ unknown[username] }}
  |    ^^^^^^^
